--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -2,11 +2,15 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import Game from '../components/Game.astro';
+import InfoGame from '../components/InfoGame.astro'
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<Navbar/>
 	<Game/>
+	<InfoGame/>
+	<Footer/>
 </Layout>
 
 <style>
