--- a/CleanMadness/src/components/Footer.astro
+++ b/CleanMadness/src/components/Footer.astro
@@ -1,15 +1,83 @@
 ---
+import linkedin from '../assets/mdi_linkedin.svg'
+import facebook from '../assets/ic_baseline-facebook.svg'
+import instagram from '../assets/mdi_instagram.svg'
+import web from '../assets/mdi_web.svg'
 ---
 
 <footer>
-  <p>Copyright © 2023. Todos los derechos reservados.</p>
+  <div class="social">
+    <div class="linkedin"><img src={linkedin} alt="linkedin"></div>
+    <div class="facebook"><img src={facebook} alt="facebook"></div>
+    <div class="instagram"><img src={instagram} alt="instagram"></div>
+    <div class="web"><img src={web} alt="web"></div>
+  </div>
+  <div class="copyright">
+    <h3>©2023 WKB GAMING. Todos los derechos reservados.</h3>
+  </div>
 </footer>
 
 <style>
   footer {
     background-color: black;
-    margin-top: -80px;
     height: 396px;
-    z-index: -1;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    place-items: center;
+  }
+
+/* --------Social icons-------- */
+  .social {
+    grid-area: 1 / 1 / 2 / 2;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+    margin-top: 150px;
+    width: 300px;
+    place-items: center;
+    
+
+  }
+
+  .linkedin {
+    width: 33.33px;
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    justify-content: center;
+  }
+  .facebook {
+    width: 33.33px;
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    justify-content: center;
+  }
+  .instagram {
+    width: 33.33px;
+    grid-area: 1 / 3 / 2 / 4;
+    display: flex;
+    justify-content: center;
+  }
+  .web {
+    width: 33.33px;
+    grid-area: 1 / 4 / 2 / 5;
+    display: flex;
+    justify-content: center;
+  }
+/* --------Copyringht-------- */
+  .copyright {
+    grid-area: 2 / 1 / 3 / 2;
+    
+  }
+  .copyright h3 {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: -60px;
   }
 </style>
