--- a/CleanMadness/src/components/Game.astro
+++ b/CleanMadness/src/components/Game.astro
@@ -92,8 +92,7 @@ import bg from "../assets/BG.jpg";
     display: flex;
     height: auto;
   }
-  .text,
-  .text2 {
+  .text {
     grid-area: 2 / 1 / 3 / 2;
     display: flex;
     flex-direction: column;
