--- a/CleanMadness/src/components/Why.astro
+++ b/CleanMadness/src/components/Why.astro
@@ -1,3 +1,99 @@
 ---
-import frame from '../assets/Frame\ 2.png'
+import textgroup from "../assets/txtgroup.png";
 ---
+
+<div class="why" id="why">
+  <div class="text">
+    <div><p>El Por que</p></div>
+    <div class="line"></div>
+  </div>
+
+  <div class="description">
+    <img src={textgroup} alt="textgroup" />
+    <div class="descrip">
+        <div class="descrip1"><p>
+        La idea base surgió del sentimiento de <strong>concientización sobre el
+        medioambiente</strong> y la importancia del rol de los recolectores de basura,
+        así como de la intención de las personas de contribuir con esta tarea.
+        Se buscó crear un juego <strong>entretenido, con acción, dinamismo</strong> y que al
+        mismo tiempo mostrara el importante factor de la basura en nuestro
+        planeta y cómo, si no se erradica, podrá causar muchos <strong>problemas a largo 
+        plazo.</strong>
+        
+      </p></div>
+      
+      <div class="descrip2"><p>
+        En el juego, controlarás a un <strong>recolector de basura</strong> en un mundo sumido
+        por la contaminación. Fruto de esto y de las malas intenciones de la
+        humanidad, nació una entidad maligna llamada <strong>Mente</strong>, capaz de dar vida
+        corrupta a la basura. Esta entidad atacará al jugador con la intención
+        de detenerlo. Tu misión será <strong>limpiar el mundo de esta corrupción</strong>,
+        destruyendo los enemigos controlados por el villano y recolectando la
+        mayor cantidad de basura posible.
+      </p></div>
+      
+    </div>
+  </div>
+</div>
+
+<style>
+  /* ---------why--------- */
+  .why {
+    display: flex;
+    flex-direction: column; 
+  }
+  /* ---------title--------- */
+  .text {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    height: 20%;
+  }
+
+  .text p {
+    font-family: "Nunito", sans-serif;
+    font-size: 22px;
+    color: white;
+  }
+  .line {
+    position: absolute;
+    width: 89px;
+    height: 0px;
+    border: 2px solid #ffffff;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+  /* ---------description--------- */
+  .description {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+  .description img {
+    max-width: 1189px;
+  }
+  .descrip {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 900px;
+  }
+
+  .descrip1, .descrip2 {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    
+  }
+  .descrip1 ,.descrip2 p{
+    font-family: "Nunito", sans-serif;
+    color: white;
+    font-size: 20px;
+  }
+</style>
