--- a/CleanMadness/src/components/InfoGame.astro
+++ b/CleanMadness/src/components/InfoGame.astro
@@ -1,13 +1,14 @@
 ---
+import Support from "./Support.astro";
 import Why from "./Why.astro";
 ---
 
-<div class="info">
-  <div class="why">
-    <Why />
+<div class="info" id="why">
+  <div class="why" >
+    <Why/>
   </div>
-  <div class="support">
-    
+  <div class="support" >
+    <Support/>
   </div>
 </div>
 
