--- a/CleanMadness/src/components/Why.astro
+++ b/CleanMadness/src/components/Why.astro
@@ -81,6 +81,7 @@ import villan1 from "../assets/SPRITE VILLAIN.png";
     display: inline-block;
     text-align: center;
     margin-top: 70px;
+    
   }
   .description img {
     max-width: 70em;
@@ -89,7 +90,8 @@ import villan1 from "../assets/SPRITE VILLAIN.png";
     position: absolute;
     width: 15em;
     top: 300px;
-    right: -140px;
+    max-width: 15em;
+    margin: 0 -140px;
   }
   .descrip {
     display: flex;
