--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -26,5 +26,6 @@ import Footer from "../components/Footer.astro";
   body {
     max-width: 100%;
     max-height: 100%;
+	overflow-x: hidden;
   }
 </style>
