--- a/CleanMadness/src/components/Game.astro
+++ b/CleanMadness/src/components/Game.astro
@@ -1,7 +1,6 @@
 ---
 import logo from "../assets/LogotipoCOLOR-V2 2.png";
 import google from "../assets/google-play-badge.png";
-import bg from "../assets/BG.jpg";
 ---
 
 <div class="container">
@@ -29,7 +28,10 @@ import bg from "../assets/BG.jpg";
         <div class="line"></div>
       </div>
       <div class="download">
-        <img src={google} alt="download" />
+        <a
+          href="https://play.google.com/store/apps/details?id=com.ea.game.pvzfree_row&hl=es_419"
+          ><img src={google} alt="download" /></a
+        >
       </div>
     </div>
   </div>
