--- a/CleanMadness/src/components/Navbar.astro
+++ b/CleanMadness/src/components/Navbar.astro
@@ -10,7 +10,7 @@ import logo from '../assets/LogotipoCOLOR-V2 1.png'
       </div>
       <div class="options">
         <div class="option"><a href="#game">El Juego</a></div>
-        <div class="option"><a href="#why">El Porque</a></div>
+        <div class="option"><a href="#why">El Por qué</a></div>
         <div class="option"><a href="#support">Nos Apoyan</a></div>
       </div>
     </div>
