--- a/CleanMadness/src/components/Support.astro
+++ b/CleanMadness/src/components/Support.astro
@@ -1,30 +1,37 @@
 ---
-import wkb from '../assets/WKB LOGO.svg'
-import oniria from '../assets/ONIRIA LOGO.svg'
-import edojo from '../assets/Logo EDOJO.svg'
+import wkb from "../assets/WKB LOGO.svg";
+import oniria from "../assets/ONIRIA LOGO.svg";
+import edojo from "../assets/Logo EDOJO.svg";
 ---
-<div class="support"  id="support">
-    <div class="text">
-        <p>Nos apoyan</p>
+
+<div class="support" id="support">
+  <div class="text">
+    <p>Nos apoyan</p>
+  </div>
+  <div class="line"></div>
+  <div class="logos">
+    <div>
+      <a href="https://wkbagencia.com.ar/"
+        ><img src={wkb} alt="wkb" class="logo" /></a
+      >
     </div>
-    <div class="line"></div>
-    <div class="logos">
-      <div>
-        <img src={wkb} alt="wkb" class="logo" />
-      </div>
-      <div>
-        <img src={oniria} alt="oniria" class="logo" />
-      </div>
-      <div>
-        <img src={edojo} alt="edojo" class="logo" />
-      </div>
+    <div>
+      <a href="https://oniriaesports.com/"
+        ><img src={oniria} alt="oniria" class="logo" /></a
+      >
+    </div>
+    <div>
+      <a href="https://edojo.pro/"
+        ><img src={edojo} alt="edojo" class="logo" /></a
+      >
     </div>
   </div>
+</div>
 
-  <style>
-     .support {
+<style>
+  .support {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     margin-top: 190px;
   }
@@ -51,15 +58,15 @@ import edojo from '../assets/Logo EDOJO.svg'
     text-align: center;
     margin-top: -10px;
   }
-    .logos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 10rem;
-  margin-top: 100px;
-}
+  .logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 10rem;
+    margin-top: 100px;
+  }
 
-.logo {
-  width: 233px;
-}
-  </style>
+  .logo {
+    width: 233px;
+  }
+</style>
