--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -54,7 +54,18 @@ import frame2 from "../assets/Frame 2.png";
     height: auto;
   }
   .footer {
-    z-index: ;
     margin-top: -80px;
   }
+
+
+    /* Media query para dispositivos móviles */
+    @media screen and (max-width: 390px) {
+    .frame img {
+      min-width: 100px;
+      margin-top:60px;
+    }
+    .footer{
+      margin-top:-15px ;
+    }
+    }
 </style>
