--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -64,6 +64,10 @@ import frame2 from "../assets/Frame 2.png";
       min-width: 100px;
       margin-top:60px;
     }
+
+    .info{
+      margin-top: -15px;
+    }
     .footer{
       margin-top:-15px ;
     }
