--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -71,5 +71,8 @@ import frame2 from "../assets/Frame 2.png";
     .footer{
       margin-top:-15px ;
     }
+    body{
+      background-color: blue;
+    }
     }
 </style>
