--- a/CleanMadness/src/components/InfoGame.astro
+++ b/CleanMadness/src/components/InfoGame.astro
@@ -34,4 +34,11 @@ import Why from "./Why.astro";
   .support {
     grid-area: 2 / 1 / 3 / 2;
   }
+
+  @media only screen and (max-width: 390px) {
+  .info{
+    width: 390px;
+    height: 844px;
+  }
+}
 </style>
