responsive celulares actuales

--- a/CleanMadness/src/components/Footer.astro
+++ b/CleanMadness/src/components/Footer.astro
@@ -91,7 +91,7 @@ import web from "../assets/mdi_web.svg";
     justify-content: center;
     margin-top: -60px;
   }
-  @media only screen and (max-width: 390px) {
+  @media only screen and (max-width: 412px) {
     footer {
       height: 200px;
     }
@@ -136,4 +136,7 @@ import web from "../assets/mdi_web.svg";
       margin-top: 0px;
     }
   }
+
+  /* Samsung Galaxy A51/A71 412x914 */
+  
 </style>
