--- a/CleanMadness/src/components/InfoGame.astro
+++ b/CleanMadness/src/components/InfoGame.astro
@@ -35,9 +35,9 @@ import Why from "./Why.astro";
     grid-area: 2 / 1 / 3 / 2;
   }
 
-  @media only screen and (max-width: 390px) {
+  @media only screen and (max-width: 412px) {
   .info{
-    width: 390px;
+    width: auto;
     height: 844px;
   }
 }
