--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -59,7 +59,8 @@ import frame2 from "../assets/Frame 2.png";
 
 
     /* Media query para dispositivos móviles */
-    @media screen and (max-width: 390px) {
+    /* Iphone 12 Pro 390x844 */
+    @media screen and (max-width: 412px) {
     .frame img {
       min-width: 100px;
       margin-top:60px;
@@ -75,4 +76,8 @@ import frame2 from "../assets/Frame 2.png";
       background-color: blue;
     }
     }
+
+    
+
+
 </style>
