--- a/CleanMadness/src/components/Navbar.astro
+++ b/CleanMadness/src/components/Navbar.astro
@@ -65,33 +65,32 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
   }
 
   @media screen and (max-width: 412px) {
-    .logo{
-        display: none;
+    .logo {
+      display: none;
     }
 
-    .navbar{
-      
-    height:30px;
-    width: 18%;
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: 0rem;
-    margin-top: 40px;
-    padding: 0 0px;
+    .navbar {
+      height: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      column-gap: 0.6rem;
+      margin-top: 40px;
+      padding: 0 0px;
     }
-    
-    .option{
-    width: 100px;
-    height: 42px;
+
+    .option {
+      width: 100px;
+      height: 42px;
+      box-shadow: 0px 0px 25px #222;
+      backdrop-filter: blur(10px);
     }
 
     .option a {
-    font-family: "Nunito", sans-serif;
-    font-size: 14px;
-    color: white;
-    text-decoration: none;
+      font-family: "Nunito", sans-serif;
+      font-size: 14px;
+      color: white;
+      text-decoration: none;
+    }
   }
-}
 </style>
