--- a/CleanMadness/src/components/Game.astro
+++ b/CleanMadness/src/components/Game.astro
@@ -103,7 +103,7 @@ import google from "../assets/google-play-badge.png";
   }
 
   /* Media query para dispositivos móviles */
-  @media screen and (max-width: 412px) {
+ /*  @media screen and (max-width: 412px) {
     .game {
       background-image: url(../assets/Load Screen.svg);
       height: 900px;
@@ -130,7 +130,7 @@ import google from "../assets/google-play-badge.png";
       width: 153px;
       margin-top: 30px;
     }
-  }
+  } */
 
   
 </style>
