--- a/CleanMadness/src/components/Navbar.astro
+++ b/CleanMadness/src/components/Navbar.astro
@@ -93,9 +93,9 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
       text-decoration: none;
     }
   }
-  @media screen and (max-width: 390px) {
+  /* @media screen and (max-width: 390px) {
     .navbar {
       column-gap: 0rem;
     }
-  }
+  } */
 </style>
