--- a/CleanMadness/src/components/Support.astro
+++ b/CleanMadness/src/components/Support.astro
@@ -70,13 +70,11 @@ import edojo from "../assets/Logo EDOJO.svg";
     width: 233px;
   }
 
-  @media only screen and (max-width: 412px) {
+ /*  @media only screen and (max-width: 412px) {
     .support {
     margin-top: 250px;
   }
-  /* ---------title--------- */
- 
-
+  
   .text p {
 
     font-size: 16px;
@@ -94,5 +92,5 @@ import edojo from "../assets/Logo EDOJO.svg";
     width: 100px;
   }
 
-  }
+  } */
 </style>
