--- a/CleanMadness/src/components/Why.astro
+++ b/CleanMadness/src/components/Why.astro
@@ -145,9 +145,9 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
     font-size: 20px;
   }
 
-  @media only screen and (max-width: 412px) {
+  /* @media only screen and (max-width: 412px) {
    
-    /* ---------title--------- */
+    
 
     .text p {
       font-size: 16px;
@@ -156,7 +156,7 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
       width: 50px;
       margin-top: -12px;
     }
-    /* ---------description--------- */
+   
     .description {
       margin-top: 250px;
     }
@@ -193,5 +193,5 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
       font-size: 14px;
       padding: 0 20px;
     }
-  }
+  } */
 </style>
