--- a/CleanMadness/src/components/Footer.astro
+++ b/CleanMadness/src/components/Footer.astro
@@ -91,13 +91,13 @@ import web from "../assets/mdi_web.svg";
     justify-content: center;
     margin-top: -60px;
   }
-  @media only screen and (max-width: 412px) {
+  /* @media only screen and (max-width: 412px) {
     footer {
       height: 200px;
-    }
+    } */
 
     /* --------Social icons-------- */
-    .social {
+  /*   .social {
       margin-top: 50px;
       width: 300px;
     }
@@ -127,15 +127,15 @@ import web from "../assets/mdi_web.svg";
       justify-content: center;
     }
     /* --------Copyringht-------- */
-    .copyright {
+    /* .copyright {
       grid-area: 2 / 1 / 3 / 2;
     }
     .copyright h3 {
       font-size: 12px;
       text-align: center;
       margin-top: 0px;
-    }
-  }
+    } */
+  } */
 
   /* Samsung Galaxy A51/A71 412x914 */
   
