--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -60,7 +60,7 @@ import frame2 from "../assets/Frame 2.png";
 
     /* Media query para dispositivos móviles */
     /* Iphone 12 Pro 390x844 */
-    /* @media screen and (max-width: 412px) {
+     @media screen and (max-width: 412px) {
     .frame img {
       min-width: 100px;
       margin-top:60px;
@@ -77,7 +77,7 @@ import frame2 from "../assets/Frame 2.png";
     }
     }
 
-     */
+
 
 
 </style>
