--- a/CleanMadness/src/components/Why.astro
+++ b/CleanMadness/src/components/Why.astro
@@ -145,7 +145,7 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
     font-size: 20px;
   }
 
-  /* @media only screen and (max-width: 412px) {
+  @media only screen and (max-width: 412px) {
    
     
 
@@ -193,5 +193,5 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
       font-size: 14px;
       padding: 0 20px;
     }
-  } */
+  } 
 </style>
