--- a/CleanMadness/src/components/InfoGame.astro
+++ b/CleanMadness/src/components/InfoGame.astro
@@ -35,10 +35,10 @@ import Why from "./Why.astro";
     grid-area: 2 / 1 / 3 / 2;
   }
 
-  /* @media only screen and (max-width: 412px) {
+   @media only screen and (max-width: 412px) {
   .info{
     width: auto;
     height: 844px;
   }
-} */
+} 
 </style>
