--- a/CleanMadness/src/components/Game.astro
+++ b/CleanMadness/src/components/Game.astro
@@ -105,7 +105,7 @@ import google from "../assets/google-play-badge.png";
   /* Media query para dispositivos móviles */
   @media screen and (max-width: 412px) {
     .game {
-      background-image: url(../assets/Load Screen.svg);
+      background-image: url(../assets/ls.svg);
       height: 900px;
       width: auto;
       display: flex;
