--- a/CleanMadness/src/components/Footer.astro
+++ b/CleanMadness/src/components/Footer.astro
@@ -92,6 +92,29 @@ import web from "../assets/mdi_web.svg";
     margin-top: -60px;
   }
 
+
+  @media only screen and (max-width:  1700px) {
+    footer {
+      height: 200px;
+      margin-top: -50px;
+    }
+
+    /* --------Social icons-------- */
+    .social {
+      margin-top: 50px;
+      width: 300px;
+    }
+
+    
+    /* --------Copyringht-------- */
+    
+    .copyright h3 {
+      font-size: 18px;
+      text-align: center;
+      margin-top: 0px;
+    }
+  }
+
   @media only screen and (max-width: 412px) {
     footer {
       height: 200px;
@@ -113,5 +136,6 @@ import web from "../assets/mdi_web.svg";
     }
   }
 
+  
   /* Samsung Galaxy A51/A71 412x914 */
 </style>
