--- a/CleanMadness/src/components/Game.astro
+++ b/CleanMadness/src/components/Game.astro
@@ -103,6 +103,36 @@ import google from "../assets/google-play-badge.png";
   }
 
   /* Media query para dispositivos móviles */
+
+  @media screen and (max-width:  1700px) {
+    .game {
+      
+      height: 800px;
+      width: auto;
+      display: flex;
+    }
+    .portada {
+      margin-top: 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .logoColorpx {
+      width:400px;
+      margin-top: 0px;
+    }
+
+    .text p {
+      font-size: 16px;
+    }
+
+    .download img {
+      width: 153px;
+      margin-top: 50px;
+    }
+  }
+  
   @media screen and (max-width: 412px) {
     .game {
       background-image: url(../assets/ls.svg);
