--- a/CleanMadness/src/components/Navbar.astro
+++ b/CleanMadness/src/components/Navbar.astro
@@ -63,6 +63,17 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
     color: white;
     text-decoration: none;
   }
+  @media screen and (max-width: 1700px) {
+    .navbar {
+      margin-top: 40px;
+      padding: 0 150px;
+    }
+
+    .option {
+      width: 100px;
+      height: 42px;
+    }
+  }
 
   @media screen and (max-width: 412px) {
     .logo {
@@ -93,5 +104,9 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
       text-decoration: none;
     }
   }
-  
+  @media screen and (max-width: 390px) {
+    .navbar{
+      column-gap: 0rem;/* ver */
+    }
+  } 
 </style>
