--- a/CleanMadness/src/components/Why.astro
+++ b/CleanMadness/src/components/Why.astro
@@ -145,6 +145,17 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
     font-size: 20px;
   }
 
+  @media screen and (max-width:  1700px) {
+    
+    .villan1 {
+      margin: 0 -180px;
+    }
+
+    .why {
+    margin-top:-50px;
+  }
+  }
+
   @media only screen and (max-width: 412px) {
    
     
@@ -194,4 +205,5 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
       padding: 0 20px;
     }
   } 
+  
 </style>
