--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -59,6 +59,23 @@ import frame2 from "../assets/Frame 2.png";
 
 
     /* Media query para dispositivos móviles */
+
+    @media screen and (max-width:  1700px) {
+    .frame img {
+      min-width: 100px;
+      margin-top:10px;
+    }
+
+    .info{
+      margin-top: -50px;
+    }
+    .footer{
+      margin-top:-15px ;
+    }
+    body{
+      background-color: blue;
+    }
+    }
     /* Iphone 12 Pro 390x844 */
      @media screen and (max-width: 412px) {
     .frame img {
@@ -70,12 +87,14 @@ import frame2 from "../assets/Frame 2.png";
       margin-top: -15px;
     }
     .footer{
-      margin-top:-15px ;
+      margin-top:25px ;
     }
     body{
       background-color: blue;
     }
     }
+
+    
 
 
 
